# extricrate

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
cli/: Cargo.toml
cli/src/: dependencies.rs  logging.rs  main.rs  transform.rs
crates/extricrate/: Cargo.toml
crates/extricrate/src/: lib.rs
crates/extricrate/tests/fixtures/broken/src/: main.rs
crates/extricrate/tests/fixtures/broken/src/module_a/: mod.rs
crates/extricrate/tests/fixtures/inline/src/: main.rs
crates/extricrate/tests/fixtures/simple/src/: main.rs
crates/extricrate/tests/fixtures/simple/src/module_a/: mod.rs  module_b.rs
crates/extricrate/tests/fixtures/structs/src/: main.rs
crates/extricrate/tests/fixtures/structs/src/module_a/: mod.rs
