[workspace]
members = ["cli", "crates/*"]
default-members = ["cli"]
resolver = "2"

[workspace.package]
authors = ["Valentin Tolmer <valentin@tolmer.fr>"]
documentation = "https://github.com/nitnelave/extricrate"
edition = "2024"
homepage = "https://github.com/nitnelave/extricrate"
license = "GPL-3.0-only"
repository = "https://github.com/nitnelave/extricrate"

[profile.release]
lto = true

[workspace.dependencies]
log = "0.4"
pretty_assertions = "1"
tracing = "0.1"
tracing-attributes = "0.1"
tracing-log = "0.2"

[workspace.dependencies.tracing-subscriber]
version = "0.3"
features = ["env-filter", "tracing-log"]

[workspace.dependencies.tracing-forest]
version = "^0.1.6"
features = ["smallvec"]
