[package]
name = "extricrate"
version = "0.0.1"
description = "Automated refactoring library to extract a Rust module into a separate crate."
categories = ["command-line-utilities"]
edition.workspace = true
keywords = ["refactoring"]
authors.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
quote = "1.0.40"
syn = { version = "2.0.101", features = ["full", "visit", "extra-traits"] }
proc-macro2 = { version = "1.0.95", features = ["span-locations"] }
thiserror = "2.0.12"
tracing.workspace = true
cargo = "0.88.0"

[dev-dependencies]
pretty_assertions.workspace = true
